# OCR-OpenCV-Tesseract

./: CMakeLists.txt  INCLUDES.h  OCR-OpenCV-Tesseract  README.md  cropper.cpp  cropper.h  main.cpp  main.py  output.txt  second.py  skew.cpp  skew.h
CPP/: CMakeCache.txt  CMakeLists.txt  INCLUDES.h  Makefile  OCR-OpenCV-Tesseract  cmake_install.cmake  compile_commands.json  main.cpp  skew.cpp
CPP/TEMP/: temp.tiff
CPP/TestCases/: test7.tiff
TEMP/: After.tiff  Before.tiff  temp.tiff
