cmake_minimum_required(VERSION 3.5)
project(OCR-OpenCV-Tesseract)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(OCR-OpenCV-Tesseract_SOURCES main.cpp cropper.cpp skew.cpp)
find_package(PkgConfig REQUIRED)
include_directories(${ImageMagick_Magick++_INCLUDE_DIR} ${ImageMagick_Magick++_ARCH_INCLUDE_DIR})
find_package(ImageMagick COMPONENTS Magick++ REQUIRED)
find_package(OpenCV REQUIRED)
pkg_search_module( TESSERACT REQUIRED tesseract )
pkg_search_module( LEPTONICA REQUIRED lept )
include_directories( ${TESSERACT_INCLUDE_DIRS} )
include_directories( ${LEPTONICA_INCLUDE_DIRS} )
link_directories( ${TESSERACT_LIBRARY_DIRS} )
link_directories( ${LEPTONICA_LIBRARY_DIRS} )
add_executable(OCR-OpenCV-Tesseract ${OCR-OpenCV-Tesseract_SOURCES})
target_link_libraries(OCR-OpenCV-Tesseract ${OpenCV_LIBS})
target_link_libraries(OCR-OpenCV-Tesseract ${TESSERACT_LIBRARIES} )
target_link_libraries(OCR-OpenCV-Tesseract ${LEPTONICA_LIBRARIES} )
target_link_libraries(OCR-OpenCV-Tesseract ${ImageMagick_LIBRARIES})